--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+}
+body {
+  color: #000000;
+}
 .App {
-  text-align: center;
+  display: flex;
+  position: relative;
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.col-left {
+  background: #191718;
+  height: 100%;
+  width: 15rem;
+  position: absolute;
+  left: 0;
+  z-index: 2;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sizeBar-Button {
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  font-weight: 700;
+  color: #aaaaaa;
+  padding: 1.4rem 9.1rem 1.1rem 1.6rem;
+  border-bottom: solid 0.1rem #5c5c5c;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sizeBar-Button:first-child {
+  color: #ffffff;
+}
+.sizeBar-Button:hover {
+  cursor: pointer;
+  background-color: #5c5c5c;
+  color: #ffffff;
+}
+.logo {
+  margin: 2rem 0 3rem;
+}
+.col-right {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0 12.9rem 0 27.9rem;
+  position: relative;
 }
-
-.App-link {
-  color: #61dafb;
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #efefef;
+  padding: 0 26.9rem;
+  margin-bottom: 4rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading h4 {
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.1rem;
+  margin: 3.8rem 0 1.8rem;
+}
+.heading p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  text-align: center;
+  margin-bottom: 3.8rem;
+}
+.content {
+  display: flex;
+  margin-bottom: 26.1rem;
+}
+.content h3 {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  margin-bottom: 1.8rem;
+}
+.item-Content img {
+  float: left;
+  margin: 0 1.6rem 0.6rem 0;
+}
+.item-Content p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+}
+.item {
+  margin-right: 5rem;
+}
+.item:last-child {
+  margin-right: 0;
+}
+.footer {
+  width: 100%;
+  padding: 3rem 0 3rem 27.9rem;
+  position: absolute;
+  bottom: 0;
+  /* border-top: #dedede solid 0.1rem; */
+  left: 0;
+}
+.footer p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  color: #3e3e3e;
+  z-index: 2;
+}
+.line {
+  height: 1px;
+  width: calc(100% - 15rem);
+  margin-left: 15rem;
+  background: #dedede;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
